# gnome-remote-desktop

./: .gitignore  .gitlab-ci.yml  Makefile  NEWS  README  README.md  autogen.sh  config.h.meson  configure.ac  gnome-remote-desktop.doap  meson.build  meson_options.txt
.gitlab-ci/: Dockerfile  commit-rules.yml  install-cmake-project.sh  run-tests.sh
data/: 20-gnome-remote-desktop.rules.in  README  README.md  gnome-remote-desktop-configuration.service.in  gnome-remote-desktop-handover.service.in  gnome-remote-desktop-system.service.in  gnome-remote-desktop-sysusers.conf.in  gnome-remote-desktop-tmpfiles.conf.in  grd-cuda-avc-utils_30.ptx  grd-cuda-damage-utils_30.ptx  grd.conf  grd.conf.in  meson.build  org.gnome.RemoteDesktop.Configuration.service.in  org.gnome.RemoteDesktop.Handover.desktop.in  org.gnome.RemoteDesktop.Handover.target  org.gnome.RemoteDesktop.conf.in  org.gnome.RemoteDesktop.service.in  org.gnome.remotedesktop.configure-system-daemon.policy.in  org.gnome.remotedesktop.enable-system-daemon.policy.in
man/: grdctl.txt  meson.build
po/: LINGUAS  POTFILES.in  ab.po  be.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  en_GB.po  eo.po  es.po  eu.po  fa.po  fi.po  fr.po  fur.po  gl.po  he.po  hi.po  hr.po  hu.po  ia.po  id.po  ie.po  is.po  it.po  ja.po  ka.po  kab.po  kk.po  ko.po  kw.po  lt.po  lv.po  ml.po  ms.po  nb.po  ne.po  (+21 more)
src/: Makefile.am  gnome-remote-desktop-headless.service.in  gnome-remote-desktop.service.in  grd-avc-frame-info.c  grd-avc-frame-info.h  grd-bitstream.c  grd-bitstream.h  grd-clipboard-rdp.c  grd-clipboard-rdp.h  grd-clipboard-vnc.c  grd-clipboard-vnc.h  grd-clipboard.c  grd-clipboard.h  grd-configuration.c  grd-context.c  grd-context.h  grd-control.c  grd-credentials-file.c  grd-credentials-file.h  grd-credentials-libsecret.c  grd-credentials-libsecret.h  grd-credentials-one-time.c  grd-credentials-one-time.h  grd-credentials-tpm.c  grd-credentials-tpm.h  grd-credentials.c  grd-credentials.h  grd-ctl.c  grd-cuda-avc-utils.cu  grd-cuda-damage-utils.cu  grd-daemon-handover.c  grd-daemon-handover.h  grd-daemon-system.c  grd-daemon-system.h  grd-daemon-user.c  grd-daemon-user.h  grd-daemon-utils.c  grd-daemon-utils.h  grd-daemon.c  grd-daemon.h  (+246 more)
src/shaders/: grd-avc-dual-view.comp  grd-avc-main-view.comp  grd-avc-stereo-view.comp  meson.build
tests/: egl-thread-test.c  meson.build  pipewire-test-runner.sh  prepare-test-environment.sh  rdp-test-runner.sh  run-rdp-tests.py  run-vnc-tests.py  test-client-rdp.c  test-client-vnc.c  tpm-test.c  vnc-test-runner.sh
