option('man',
       type: 'boolean',
       value: true,
       description: 'Generate man pages')

option('tests',
       type: 'boolean',
       value: true,
       description: 'Build the test suite')

option('fdk_aac',
       type: 'boolean',
       value: true,
       description: 'Audio output redirection for the RDP backend')

option('rdp',
       type: 'boolean',
       value: true,
       description: 'Enable the RDP backend')

option('vnc',
       type: 'boolean',
       value: false,
       description: 'Enable the VNC backend')

option('systemd',
       type: 'boolean',
       value: true,
       description: 'Enable systemd support')

option('systemd_user_unit_dir',
       type: 'string',
       value: '',
       description: 'systemd user service directory')

option('dbus_sys',
       type: 'string',
       value: '',
       description: 'Where system D-Bus conf directory is')

option('user',
       type: 'string',
       value: 'gnome-remote-desktop',
       description: 'gnome-remote-desktop system service username')
