option('man',
       type: 'boolean',
       value: true,
       description: 'Generate man pages')

option('tests',
       type: 'boolean',
       value: true,
       description: 'Build the test suite')

option('fdk_aac',
       type: 'boolean',
       value: true,
       description: 'Audio output redirection for the RDP backend')

option('rdp',
       type: 'boolean',
       value: true,
       description: 'Enable the RDP backend')

option('vnc',
       type: 'boolean',
       value: false,
       description: 'Enable the VNC backend')

option('systemd',
       type: 'boolean',
       value: true,
       description: 'Enable systemd support')

option('systemd_user_unit_dir',
       type: 'string',
       value: '',
       description: 'systemd user service directory')

option('conf_dir',
       type: 'string',
       value: '',
       description: 'Config directory for the system daemon')

option('user',
        type: 'string',
        value: 'gnome-remote-desktop',
        description: 'Username for the GNOME Remote Desktop system service')

option('dbus_sys_dir',
       type: 'string',
       value: '',
       description: 'System D-Bus conf directory')
